--- a/src/app/users/associations-inscription/associations-inscription.component.html
+++ b/src/app/users/associations-inscription/associations-inscription.component.html
@@ -27,7 +27,12 @@
         <br>
     <div class="row justify-content-md-center">
       <label></label>
-      <button type="button" (click)="inscriptionAssoc()" class="btn btn-primary mb-2 col-md-2">S'inscrire</button>
+      <div class="row justify-content-md-center">
+        <button type="button" (click)="inscriptionAssoc()" class="btn btn-primary mb-2 col-md-4">S'inscrire</button>
+      </div>
+      <div class="row justify-content-md-center">
+        <button type="button" (click)="Cancel()" class="btn btn-primary mb-2 col-md-2">Cancel</button>
+      </div>
     </div>
 
   </div>
