--- a/src/app/users/associations-connection/associations-connection.component.html
+++ b/src/app/users/associations-connection/associations-connection.component.html
@@ -20,6 +20,7 @@
     <div class="col-md-2">
       <button type="submit" class="btn btn-primary mb-2" (click)="connection()">Connexion</button>
     </div>
+    <button type="button" routerLink="association/inscription" class="btn btn-primary mb-2 col-md-2" (click)="inscription()">Inscription</button>
 
   </div>
 </form>
