--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,18 +71,9 @@
       </li>
 
       <li ngbDropdown class="nav-item">
-        <a href (click)="false" class="nav-link" ngbDropdownToggle>Besoins (à coder)</a>
-        <div ngbDropdownMenu>
-          <button routerLink="" class="dropdown-item" ngbDropdownItem>Par Camp</button>
-          <div class="dropdown-divider"></div>
-          <button routerLink="" class="dropdown-item" ngbDropdownItem>Pour l'association</button>
-        </div>
-      </li>
-
-      <li ngbDropdown class="nav-item">
         <a href (click)="false" class="nav-link" ngbDropdownToggle>Livraison</a>
         <div ngbDropdownMenu>
-          <button routerLink="delivery" class="dropdown-item" ngbDropdownItem>toutes les livraisons</button>
+          <button routerLink="delivery" class="dropdown-item" ngbDropdownItem>Toutes les livraisons</button>
           <div class="dropdown-divider"></div>
           <button routerLink="delivery/delivered" class="dropdown-item" ngbDropdownItem>Livré</button>
           <button routerLink="delivery/delivery" class="dropdown-item" ngbDropdownItem>En cours de livraison</button>
@@ -90,7 +81,7 @@
       </li>
 
       <div>
-        <button type="submit" class="btn btn-primary mb-2 " (click)="logout()">Logout</button>
+        <button type="submit" class="btn btn-primary mb-2 " (click)="logout()">Se Déconnecter</button>
       </div>
     </ng-template>
   </ul>
