--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@
       </li>
 
       <li ngbDropdown class="nav-item">
-        <a href (click)="false" routerLink="statistics" class="nav-link" ngbDropdownToggle>Statistiques</a>
+        <a (click)="false" class="nav-link" ngbDropdownToggle routerLink="statistics">Statistiques</a>
       </li>
 
       <li ngbDropdown class="nav-item">
