--- a/src/app/food-add/food-add.component.html
+++ b/src/app/food-add/food-add.component.html
@@ -21,10 +21,9 @@
     <div class="row justify-content-md-center">
       <div class="col-md-6">
         <label>Type de nouritures: </label>
-       <!-- <select [(ngModel)]="foodType" [ngModelOptions]="{standalone: true}"> -->
-        <select ng-options="typeFood as type.label for typeFood in typesFood track by typeFood.id" ng-model="selected">
-          <option readonly="" selected>-- Choisir --</option>
-          <option async *ngFor="let typeFood of typesFood" ngDefaultControl [(ngModel)]="typeFood.id" [ngModelOptions]="{standalone: true}">
+        <select ng-options="typeFood as type.label for typeFood in typesFood track by typeFood.id" [ngModelOptions]="{standalone: true}" [(ngModel)]="food.type_food_id">
+          <option value="" readonly="" selected>-- Choisir --</option>
+          <option async *ngFor="let typeFood of typesFood" ngDefaultControl [value]="typeFood.id">
             {{typeFood.type}}
           </option>
         </select>
