Update function updateFood()

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
       <li ngbDropdown class="nav-item">
         <a href (click)="false" class="nav-link" ngbDropdownToggle>Vêtements</a>
         <div ngbDropdownMenu>
-          <button routerLink="donation/cloth" class="dropdown-item" ngbDropdownItem>Ajouter</button>
+          <button routerLink="cloth/add" class="dropdown-item" ngbDropdownItem>Ajouter</button>
           <div class="dropdown-divider"></div>
           <button routerLink="cloths" class="dropdown-item" ngbDropdownItem>Liste</button>
         </div>
