--- a/src/app/cloth/cloth.component.html
+++ b/src/app/cloth/cloth.component.html
@@ -10,7 +10,7 @@
           <td>{{cloth.id}}</td>
           <td>{{cloth.name}}</td>
           <td>{{cloth.size}}</td>
-          <td>{{cloth.gender}}</td>
+          <td>{{cloth.gender_cloth_id}}</td>
           <td> <button type="button" (click)="goToClothUpdateForm(cloth.id)">Mettre à jour</button> </td>
           <td> <button type="button" (click)="deleteClothById(cloth.id)">Supprimer</button> </td>
         </tr>
