--- a/src/app/food-update/food-update.component.html
+++ b/src/app/food-update/food-update.component.html
@@ -6,8 +6,8 @@
 
     <div class="row justify-content-md-center">
       <div class="col-md-6">
-        <label for="nbPeople">Nom :</label>
-        <input type="text" name="nbPeople" id="nbPeople" class="form-control" [(ngModel)]="food.name">
+        <label for="name">Nom :</label>
+        <input value="oui" type="text" name="name" id="name" class="form-control" [(ngModel)]="food.name">
       </div>
     </div>
 
