--- a/src/app/users/association/association.component.html
+++ b/src/app/users/association/association.component.html
@@ -3,16 +3,18 @@
     <div class="card-body">
       <table class="table table-striped">
         <thead>
-        <tr> <th>Id</th><th>Nom</th> <th>Cagnotte</th> <th>mail</th> </tr>
+        <tr> <th>Id</th><th>Nom</th> <th>Cagnotte</th> <th>mail</th> <th></th> </tr>
         </thead>
-        <tbody *ngFor="let association of associations">
-        <tr >
+        <tr *ngIf="association.id !== undefined && association.name !== undefined &&
+                    association.money !== undefined && association.mail !== undefined ">
           <td>{{association.id}}</td>
           <td>{{association.name}}</td>
           <td>{{association.money}}</td>
           <td>{{association.mail}}</td>
+
+          <td> <button type="button" (click)="goToAssociationUpdateForm(association.id)">Mettre à jour</button> </td>
+
         </tr>
-        </tbody>
       </table>
     </div>
   </div>
