correction association update et preremplissage des update

--- a/src/app/food-update/food-update.component.html
+++ b/src/app/food-update/food-update.component.html
@@ -7,14 +7,14 @@
     <div class="row justify-content-md-center">
       <div class="col-md-6">
         <label for="name">Nom :</label>
-        <input value="oui" type="text" name="name" id="name" class="form-control" [(ngModel)]="food.name">
+        <input  type="text" name="name" id="name" class="form-control" [(ngModel)]="food.name">
       </div>
     </div>
 
     <div class="row justify-content-md-center">
       <div class="col-md-6">
-        <label for="city">Date de péremption : </label>
-        <input type="date" id="city" name="city" class="form-control" [(ngModel)]="food.expirationDate">
+        <label for="expirationDate">Date de péremption : </label>
+        <input type="date" id="expirationDate" name="expirationDate" class="form-control" [(ngModel)]="food.expirationDate">
       </div>
     </div>
 
