--- a/src/app/cloth-update/cloth-update.component.html
+++ b/src/app/cloth-update/cloth-update.component.html
@@ -6,14 +6,14 @@
 
     <div class="row justify-content-md-center">
       <div class="col-md-6">
-        <label>Description :</label>
-        <input type="text" class="form-control" [(ngModel)]="cloth.name">
+        <label for="name">Description :</label>
+        <input type="text" id="name" name="name" class="form-control" [(ngModel)]="cloth.name">
       </div>
     </div>
 
     <div class="row justify-content-md-center">
       <div class="col-md-6">
-        <label>Taille : </label>
+        <label for="size">Taille : </label>
         <input type="number" id="size" name="size" class="form-control" [(ngModel)]="cloth.size">
       </div>
     </div>
