--- a/src/app/medicament-update/medicament-update.component.html
+++ b/src/app/medicament-update/medicament-update.component.html
@@ -6,15 +6,15 @@
 
     <div class="row justify-content-md-center">
       <div class="col-md-6">
-        <label for="nbPeople">Nom :</label>
-        <input type="text" name="nbPeople" id="nbPeople" class="form-control" [(ngModel)]="medicament.name">
+        <label for="name">Nom :</label>
+        <input type="text" name="name" id="name" class="form-control" [(ngModel)]="medicament.name">
       </div>
     </div>
 
     <div class="row justify-content-md-center">
       <div class="col-md-6">
-        <label for="city">Date de péremtpion : </label>
-        <input type="date" id="city" name="city" class="form-control" [(ngModel)]="medicament.expirationDate">
+        <label for="expirationDate">Date de péremtpion : </label>
+        <input type="date" id="expirationDate" name="expirationDate" class="form-control" [(ngModel)]="medicament.expirationDate">
       </div>
     </div>
 
