--- a/src/app/users/association-update/association-update.component.html
+++ b/src/app/users/association-update/association-update.component.html
@@ -13,15 +13,15 @@
 
     <div class="row justify-content-md-center">
       <div class="col-md-6">
-        <label for="city">Mail : </label>
-        <input type="email" id="city" name="city" class="form-control" [(ngModel)]="association.mail">
+        <label for="mail">Mail : </label>
+        <input type="text" id="mail" name="mail" class="form-control" [(ngModel)]="association.mail">
       </div>
     </div>
 
     <div class="row justify-content-md-center">
       <div class="col-md-6">
-        <label for="city">Mot de passe : </label>
-        <input type="password" id="password" name="city" class="form-control" [(ngModel)]="association.password">
+        <label for="password">Mot de passe : </label>
+        <input type="text" id="password" name="password" class="form-control" [(ngModel)]="association.password">
       </div>
     </div>
 
