--- a/src/app/food-update/food-update.component.html
+++ b/src/app/food-update/food-update.component.html
@@ -21,7 +21,7 @@
     <div class="row justify-content-md-center">
       <div class="col-md-6">
         <label>Type de nouritures: </label>
-        <select ng-options="typeFood as type.label for typeFood in typesFood track by typeFood.id" [ngModelOptions]="{standalone: true}" [(ngModel)]="food.type_food_id">
+        <select class="form-select" ng-options="typeFood as type.label for typeFood in typesFood track by typeFood.id" [ngModelOptions]="{standalone: true}" [(ngModel)]="food.type_food_id">
           <option value="" readonly="" selected>-- Choisir --</option>
           <option async *ngFor="let typeFood of typesFood" ngDefaultControl [value]="typeFood.id">
             {{typeFood.type}}
